<resources>
    <string name="app_name">Text To Image</string>

    <!-- TEMPORARY -->
    <string name="gallery">Gallery</string>
</resources>